parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expression
Rule 1     expression -> openprogram
Rule 2     expression -> search
Rule 3     expression -> openbrowser
Rule 4     expression -> closeprogram
Rule 5     expression -> openmusicfile
Rule 6     expression -> opentextfile
Rule 7     expression -> openimagefile
Rule 8     expression -> expression CONCAT expression
Rule 9     search -> SEARCH
Rule 10    openprogram -> RUN PROGRAMS
Rule 11    openprogram -> RUN PROGRAMS PROGRAMS
Rule 12    closeprogram -> CLOSE PROGRAMS
Rule 13    closeprogram -> CLOSE TEXTFILE
Rule 14    closeprogram -> CLOSE MEDIAFILE
Rule 15    closeprogram -> CLOSE IMAGEFILE
Rule 16    openbrowser -> RUN WEB
Rule 17    opentextfile -> RUN TEXTFILE
Rule 18    openmusicfile -> RUN MEDIAFILE
Rule 19    openimagefile -> RUN IMAGEFILE

Terminals, with rules where they appear

CLOSE                : 12 13 14 15
CONCAT               : 8
IMAGEFILE            : 15 19
MEDIAFILE            : 14 18
PROGRAMS             : 10 11 11 12
RUN                  : 10 11 16 17 18 19
SEARCH               : 9
TEXTFILE             : 13 17
WEB                  : 16
error                : 

Nonterminals, with rules where they appear

closeprogram         : 4
expression           : 8 8 0
openbrowser          : 3
openimagefile        : 7
openmusicfile        : 5
openprogram          : 1
opentextfile         : 6
search               : 2

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . openprogram
    (2) expression -> . search
    (3) expression -> . openbrowser
    (4) expression -> . closeprogram
    (5) expression -> . openmusicfile
    (6) expression -> . opentextfile
    (7) expression -> . openimagefile
    (8) expression -> . expression CONCAT expression
    (10) openprogram -> . RUN PROGRAMS
    (11) openprogram -> . RUN PROGRAMS PROGRAMS
    (9) search -> . SEARCH
    (16) openbrowser -> . RUN WEB
    (12) closeprogram -> . CLOSE PROGRAMS
    (13) closeprogram -> . CLOSE TEXTFILE
    (14) closeprogram -> . CLOSE MEDIAFILE
    (15) closeprogram -> . CLOSE IMAGEFILE
    (18) openmusicfile -> . RUN MEDIAFILE
    (17) opentextfile -> . RUN TEXTFILE
    (19) openimagefile -> . RUN IMAGEFILE

    RUN             shift and go to state 10
    SEARCH          shift and go to state 11
    CLOSE           shift and go to state 1

    expression                     shift and go to state 2
    closeprogram                   shift and go to state 7
    search                         shift and go to state 3
    openbrowser                    shift and go to state 4
    openmusicfile                  shift and go to state 8
    openimagefile                  shift and go to state 9
    opentextfile                   shift and go to state 5
    openprogram                    shift and go to state 6

state 1

    (12) closeprogram -> CLOSE . PROGRAMS
    (13) closeprogram -> CLOSE . TEXTFILE
    (14) closeprogram -> CLOSE . MEDIAFILE
    (15) closeprogram -> CLOSE . IMAGEFILE

    PROGRAMS        shift and go to state 12
    TEXTFILE        shift and go to state 14
    MEDIAFILE       shift and go to state 13
    IMAGEFILE       shift and go to state 15


state 2

    (0) S' -> expression .
    (8) expression -> expression . CONCAT expression

    CONCAT          shift and go to state 16


state 3

    (2) expression -> search .

    CONCAT          reduce using rule 2 (expression -> search .)
    $end            reduce using rule 2 (expression -> search .)


state 4

    (3) expression -> openbrowser .

    CONCAT          reduce using rule 3 (expression -> openbrowser .)
    $end            reduce using rule 3 (expression -> openbrowser .)


state 5

    (6) expression -> opentextfile .

    CONCAT          reduce using rule 6 (expression -> opentextfile .)
    $end            reduce using rule 6 (expression -> opentextfile .)


state 6

    (1) expression -> openprogram .

    CONCAT          reduce using rule 1 (expression -> openprogram .)
    $end            reduce using rule 1 (expression -> openprogram .)


state 7

    (4) expression -> closeprogram .

    CONCAT          reduce using rule 4 (expression -> closeprogram .)
    $end            reduce using rule 4 (expression -> closeprogram .)


state 8

    (5) expression -> openmusicfile .

    CONCAT          reduce using rule 5 (expression -> openmusicfile .)
    $end            reduce using rule 5 (expression -> openmusicfile .)


state 9

    (7) expression -> openimagefile .

    CONCAT          reduce using rule 7 (expression -> openimagefile .)
    $end            reduce using rule 7 (expression -> openimagefile .)


state 10

    (10) openprogram -> RUN . PROGRAMS
    (11) openprogram -> RUN . PROGRAMS PROGRAMS
    (16) openbrowser -> RUN . WEB
    (18) openmusicfile -> RUN . MEDIAFILE
    (17) opentextfile -> RUN . TEXTFILE
    (19) openimagefile -> RUN . IMAGEFILE

    PROGRAMS        shift and go to state 20
    WEB             shift and go to state 17
    MEDIAFILE       shift and go to state 21
    TEXTFILE        shift and go to state 18
    IMAGEFILE       shift and go to state 19


state 11

    (9) search -> SEARCH .

    CONCAT          reduce using rule 9 (search -> SEARCH .)
    $end            reduce using rule 9 (search -> SEARCH .)


state 12

    (12) closeprogram -> CLOSE PROGRAMS .

    CONCAT          reduce using rule 12 (closeprogram -> CLOSE PROGRAMS .)
    $end            reduce using rule 12 (closeprogram -> CLOSE PROGRAMS .)


state 13

    (14) closeprogram -> CLOSE MEDIAFILE .

    CONCAT          reduce using rule 14 (closeprogram -> CLOSE MEDIAFILE .)
    $end            reduce using rule 14 (closeprogram -> CLOSE MEDIAFILE .)


state 14

    (13) closeprogram -> CLOSE TEXTFILE .

    CONCAT          reduce using rule 13 (closeprogram -> CLOSE TEXTFILE .)
    $end            reduce using rule 13 (closeprogram -> CLOSE TEXTFILE .)


state 15

    (15) closeprogram -> CLOSE IMAGEFILE .

    CONCAT          reduce using rule 15 (closeprogram -> CLOSE IMAGEFILE .)
    $end            reduce using rule 15 (closeprogram -> CLOSE IMAGEFILE .)


state 16

    (8) expression -> expression CONCAT . expression
    (1) expression -> . openprogram
    (2) expression -> . search
    (3) expression -> . openbrowser
    (4) expression -> . closeprogram
    (5) expression -> . openmusicfile
    (6) expression -> . opentextfile
    (7) expression -> . openimagefile
    (8) expression -> . expression CONCAT expression
    (10) openprogram -> . RUN PROGRAMS
    (11) openprogram -> . RUN PROGRAMS PROGRAMS
    (9) search -> . SEARCH
    (16) openbrowser -> . RUN WEB
    (12) closeprogram -> . CLOSE PROGRAMS
    (13) closeprogram -> . CLOSE TEXTFILE
    (14) closeprogram -> . CLOSE MEDIAFILE
    (15) closeprogram -> . CLOSE IMAGEFILE
    (18) openmusicfile -> . RUN MEDIAFILE
    (17) opentextfile -> . RUN TEXTFILE
    (19) openimagefile -> . RUN IMAGEFILE

    RUN             shift and go to state 10
    SEARCH          shift and go to state 11
    CLOSE           shift and go to state 1

    expression                     shift and go to state 22
    closeprogram                   shift and go to state 7
    search                         shift and go to state 3
    openbrowser                    shift and go to state 4
    openmusicfile                  shift and go to state 8
    openimagefile                  shift and go to state 9
    opentextfile                   shift and go to state 5
    openprogram                    shift and go to state 6

state 17

    (16) openbrowser -> RUN WEB .

    CONCAT          reduce using rule 16 (openbrowser -> RUN WEB .)
    $end            reduce using rule 16 (openbrowser -> RUN WEB .)


state 18

    (17) opentextfile -> RUN TEXTFILE .

    CONCAT          reduce using rule 17 (opentextfile -> RUN TEXTFILE .)
    $end            reduce using rule 17 (opentextfile -> RUN TEXTFILE .)


state 19

    (19) openimagefile -> RUN IMAGEFILE .

    CONCAT          reduce using rule 19 (openimagefile -> RUN IMAGEFILE .)
    $end            reduce using rule 19 (openimagefile -> RUN IMAGEFILE .)


state 20

    (10) openprogram -> RUN PROGRAMS .
    (11) openprogram -> RUN PROGRAMS . PROGRAMS

    CONCAT          reduce using rule 10 (openprogram -> RUN PROGRAMS .)
    $end            reduce using rule 10 (openprogram -> RUN PROGRAMS .)
    PROGRAMS        shift and go to state 23


state 21

    (18) openmusicfile -> RUN MEDIAFILE .

    CONCAT          reduce using rule 18 (openmusicfile -> RUN MEDIAFILE .)
    $end            reduce using rule 18 (openmusicfile -> RUN MEDIAFILE .)


state 22

    (8) expression -> expression CONCAT expression .
    (8) expression -> expression . CONCAT expression

  ! shift/reduce conflict for CONCAT resolved as shift
    $end            reduce using rule 8 (expression -> expression CONCAT expression .)
    CONCAT          shift and go to state 16

  ! CONCAT          [ reduce using rule 8 (expression -> expression CONCAT expression .) ]


state 23

    (11) openprogram -> RUN PROGRAMS PROGRAMS .

    CONCAT          reduce using rule 11 (openprogram -> RUN PROGRAMS PROGRAMS .)
    $end            reduce using rule 11 (openprogram -> RUN PROGRAMS PROGRAMS .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for CONCAT in state 22 resolved as shift
